--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
 		"lodash": "^4.17.4",
 		"vue": "^2.5.17"
 	},
-    "dependencies": {
-        "laravel-echo": "^1.6.1",
-        "laravel-vue-pagination": "^2.0.1",
-        "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0",
-        "vuejs-auto-complete": "^0.9.0",
-        "vue-toasted": "^1.1.28"
-    }
+	"dependencies": {
+		"laravel-echo": "^1.6.1",
+		"laravel-vue-pagination": "^2.0.1",
+		"socket.io": "^2.3.0",
+		"socket.io-client": "^2.3.0",
+		"vue-sweetalert2": "^1.5.3",
+		"vue-toasted": "^1.1.28",
+		"vuejs-auto-complete": "^0.9.0"
+	}
 }
