--- a/package.json
+++ b/package.json
@@ -2,29 +2,21 @@
 	"private": true,
 	"scripts": {
 		"dev": "npm run development",
-		"development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch": "npm run development -- --watch",
-		"watch-poll": "npm run watch -- --watch-poll",
-		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod": "npm run production",
-		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
 	},
 	"devDependencies": {
 		"axios": "^0.18.0",
-		"bootstrap": "^4.0.0",
-		"cross-env": "^5.1",
-		"jquery": "^3.2",
-		"laravel-elixir": "^5.0.0",
-		"laravel-elixir-vueify": "1.0.6",
-		"laravel-mix": "^2.1.14",
 		"lodash": "^4.17.4",
-		"vue": "^2.5.17"
+		"vue": "^2.5.17",
+		"laravel-mix": "^6.0.6"
 	},
 	"dependencies": {
-		"laravel-echo": "^1.6.1",
 		"laravel-vue-pagination": "^2.0.1",
-		"socket.io": "^2.3.0",
-		"socket.io-client": "^2.3.0",
 		"vue-sweetalert2": "^1.5.3",
 		"vue-toasted": "^1.1.28",
 		"vuejs-auto-complete": "^0.9.0"
