--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
 	"private": true,
 	"scripts": {
 		"dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+		"development": "mix",
+		"watch": "mix watch",
+		"watch-poll": "mix watch -- --watch-options-poll=1000",
+		"hot": "mix watch --hot",
+		"prod": "npm run production",
+		"production": "mix --production"
 	},
 	"devDependencies": {
 		"axios": "^0.18.0",
+		"laravel-mix": "^6.0.6",
 		"lodash": "^4.17.4",
-		"vue": "^2.5.17",
-		"laravel-mix": "^6.0.6"
+		"vue": "^2.6.14",
+		"vue-loader": "^15.9.8",
+		"vue-template-compiler": "^2.5.17"
 	},
 	"dependencies": {
 		"laravel-vue-pagination": "^2.0.1",
